syntax="proto3";

package pb;

option go_package="/pb";

// SearchRequest Payload
message SearchRequest{
  string search = 1;
  string page = 2;
}

message DetailRequest{
  string id = 1;
}

message SearchResponse{
  repeated Movie movies = 1;
}

message Movie{
  string id = 1;
  string title = 2;
  string year = 3;
  string imdbID = 4;
  string type = 5;
  string poster = 6;
}

//Define RPC service
service MovieService {
  rpc Fetch(SearchRequest) returns (SearchResponse);
  rpc GetByID(DetailRequest) returns (Movie);
}